Fix result text overflowing

--- a/style.css
+++ b/style.css
@@ -35,18 +35,24 @@ body {
     margin-top: 16px;
     margin-bottom: 16px;
     background-color: transparent;
+    max-width: 100%;
+    overflow: hidden;
 }
 
-.result {
+.result-container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    padding: 8px;
+    justify-content: flex-end;
+    align-items: center;
     background-color: lightgray;
+    height: 20%;
     border-radius: 8px;
+}
+
+.result-text {
     font-size: 48px;
-    font-weight: bold;
+    font-weight: bold;  
+    padding: 0 8px; 
+    color: black; 
 }
 
 .buttons {
@@ -64,6 +70,7 @@ body {
 }
 
 .row button {
+    color: black;
     border-radius: 4px;
     border: none;
     flex: 1;
